vlib/v/checker/tests/map_ops.vv
fn test_map() {
	mut m := map[int]string{}
	_ = m[`!`]
	m['hi'] = 8
	m[&m] += 4
	a := 10
	ptr := &a
	mut n := map[int]int{}
	n[ptr] = 1
	_ = ptr in n
}
